RESOLVED FIXED201962
AddPlugInAutoStartOriginHash / PlugInDidReceiveUserInteraction IPC should not need to pass a SessionID
https://bugs.webkit.org/show_bug.cgi?id=201962
Summary AddPlugInAutoStartOriginHash / PlugInDidReceiveUserInteraction IPC should not...
Chris Dumez
Reported 2019-09-18 19:18:46 PDT
AddPlugInAutoStartOriginHash / PlugInDidReceiveUserInteraction IPC from the WebProcess to the UIProcess should not need to pass a SessionID, since the UIProcess already knows the SessionID of a given WebProcess.
Attachments
Patch (8.10 KB, patch)
2019-09-18 19:24 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-09-18 19:24:38 PDT
Geoffrey Garen
Comment 2 2019-09-18 19:29:21 PDT
Comment on attachment 379095 [details] Patch r=me
WebKit Commit Bot
Comment 3 2019-09-18 21:36:29 PDT
Comment on attachment 379095 [details] Patch Clearing flags on attachment: 379095 Committed r250084: <https://trac.webkit.org/changeset/250084>
WebKit Commit Bot
Comment 4 2019-09-18 21:36:31 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-09-18 21:39:02 PDT
Radar WebKit Bug Importer
Comment 6 2019-09-18 21:39:03 PDT
Note You need to log in before you can comment on or make changes to this bug.